# email_cli_app

./: .gitignore  README.md  pyproject.toml
src/: app.py  email_sender.py  smtp_config.example.py  styles.css
